# soot-dem

./: .gitignore  .gitmodules  CMakeLists.txt  afm_necking_fraction.cpp  afm_necking_fraction_input.xml  afm_no_necks.cpp  afm_tip.h  aggregate.h  aggregate_deposition.cpp  aggregate_deposition_no_necks.cpp  aggregate_stats.h  break_neck.cpp  break_neck.h  central_force.h  coating_force.h  deposition_input.xml  energy.cpp  energy.h  io_common.cpp  io_common.h  main.cpp  main_loop.h  parameter_loader.cpp  parameter_loader.h  reader.cpp  reader.h  rect_substrate.h  remove_overlap.h  restructuring.cpp  restructuring_input.xml  writer.cpp  writer.h
.github/workflows/: test.yml
afm_indentation_necking_fraction/: force-displacement-frac-92.csv  force-displacement-frac-95.csv  force-displacement-frac-98.csv  force-displacement.csv  plot.plt
afm_indentation_necking_fraction/aggregate_4/: particles_init.vtk
afm_indentation_necking_fraction/aggregate_5/: afm_data.csv  force-displacement-frac-95.csv  force-displacement-frac-98.csv  particles_init.vtk  plot-experiment.plt  plot.plt
afm_indentation_no_necks/: force-displacement.csv  particles_init.vtk  plot.plt
flage_aggregates/: aggregate_1.xml  aggregate_2.xml  aggregate_3.xml
mackowski_aggregates/: aggregate_3.txt  aggregate_4.txt  aggregate_5.txt  aggregate_7.txt  aggregate_8.txt
neck_strength_parametrization/: force_writer.cpp  force_writer.h  mechanical_testing_step_handler.h  tensile_deformation.cpp
restructuring/aggregate_4/frac_20/run/: necks_0.vtk  necks_1.vtk  necks_10.vtk  necks_100.vtk  necks_101.vtk  necks_102.vtk  necks_103.vtk  necks_104.vtk  necks_105.vtk  necks_106.vtk  necks_107.vtk  necks_108.vtk  necks_109.vtk  necks_11.vtk  necks_110.vtk  necks_111.vtk  necks_112.vtk  necks_113.vtk  necks_114.vtk  necks_115.vtk  necks_116.vtk  necks_117.vtk  necks_118.vtk  necks_119.vtk  necks_12.vtk  necks_120.vtk  necks_121.vtk  necks_122.vtk  necks_123.vtk  necks_124.vtk  necks_125.vtk  necks_126.vtk  necks_127.vtk  necks_128.vtk  necks_129.vtk  necks_13.vtk  necks_130.vtk  necks_131.vtk  necks_132.vtk  necks_133.vtk  (+1207 more)
restructuring/aggregate_4/frac_40/run/: necks_0.vtk  necks_1.vtk  necks_10.vtk  necks_100.vtk  necks_101.vtk  necks_102.vtk  necks_103.vtk  necks_104.vtk  necks_105.vtk  necks_106.vtk  necks_107.vtk  necks_108.vtk  necks_109.vtk  necks_11.vtk  necks_110.vtk  necks_111.vtk  necks_112.vtk  necks_113.vtk  necks_114.vtk  necks_115.vtk  necks_116.vtk  necks_117.vtk  necks_118.vtk  necks_119.vtk  necks_12.vtk  necks_120.vtk  necks_121.vtk  necks_122.vtk  necks_123.vtk  necks_124.vtk  necks_125.vtk  necks_126.vtk  necks_127.vtk  necks_128.vtk  necks_129.vtk  necks_13.vtk  necks_130.vtk  necks_131.vtk  necks_132.vtk  necks_133.vtk  (+1126 more)
restructuring/aggregate_4/frac_80/run/: necks_0.vtk  necks_1.vtk  necks_10.vtk  necks_100.vtk  necks_101.vtk  necks_102.vtk  necks_103.vtk  necks_104.vtk  necks_105.vtk  necks_106.vtk  necks_107.vtk  necks_108.vtk  necks_109.vtk  necks_11.vtk  necks_110.vtk  necks_111.vtk  necks_112.vtk  necks_113.vtk  necks_114.vtk  necks_115.vtk  necks_116.vtk  necks_117.vtk  necks_118.vtk  necks_119.vtk  necks_12.vtk  necks_120.vtk  necks_121.vtk  necks_122.vtk  necks_123.vtk  necks_124.vtk  necks_125.vtk  necks_126.vtk  necks_127.vtk  necks_128.vtk  necks_129.vtk  necks_13.vtk  necks_130.vtk  necks_131.vtk  necks_132.vtk  necks_133.vtk  (+1276 more)
restructuring/aggregate_4/frac_95/run/: necks_0.vtk  necks_1.vtk  necks_10.vtk  necks_100.vtk  necks_101.vtk  necks_102.vtk  necks_103.vtk  necks_104.vtk  necks_105.vtk  necks_106.vtk  necks_107.vtk  necks_108.vtk  necks_109.vtk  necks_11.vtk  necks_110.vtk  necks_111.vtk  necks_112.vtk  necks_113.vtk  necks_114.vtk  necks_115.vtk  necks_116.vtk  necks_117.vtk  necks_118.vtk  necks_119.vtk  necks_12.vtk  necks_120.vtk  necks_121.vtk  necks_122.vtk  necks_123.vtk  necks_124.vtk  necks_125.vtk  necks_126.vtk  necks_127.vtk  necks_128.vtk  necks_129.vtk  necks_13.vtk  necks_130.vtk  necks_131.vtk  necks_132.vtk  necks_133.vtk  (+1230 more)
restructuring/flage_aggregate_2/run/: necks_0.vtk  necks_1.vtk  necks_10.vtk  necks_100.vtk  necks_101.vtk  necks_102.vtk  necks_103.vtk  necks_104.vtk  necks_105.vtk  necks_106.vtk  necks_107.vtk  necks_108.vtk  necks_109.vtk  necks_11.vtk  necks_110.vtk  necks_111.vtk  necks_112.vtk  necks_113.vtk  necks_114.vtk  necks_115.vtk  necks_116.vtk  necks_117.vtk  necks_118.vtk  necks_119.vtk  necks_12.vtk  necks_120.vtk  necks_121.vtk  necks_122.vtk  necks_123.vtk  necks_124.vtk  necks_125.vtk  necks_126.vtk  necks_127.vtk  necks_128.vtk  necks_129.vtk  necks_13.vtk  necks_130.vtk  necks_131.vtk  necks_132.vtk  necks_133.vtk  (+1260 more)
src/: afm_breaking_necks.cpp  afm_necking_fraction.cpp  afm_tip.h  aggregate.h  aggregate_breaking_necks.h  aggregate_deposition.cpp  aggregate_stats.cpp  aggregate_stats.h  aggregation.cpp  anchored_restructuring.cpp  anchored_restructuring_breaking_necks_sphere_force.cpp  applied_force.h  break_neck.cpp  break_neck.h  central_force.h  coating_force.h  convexity.cpp  convexity.h  convexity_test.cpp  energy.cpp  energy.h  exception.h  io_common.cpp  io_common.h  mechanics_testing.cpp  neck_strength_pdf.h  parameter_loader.cpp  parameter_loader.h  preview_renderer.cpp  preview_renderer.h  random_engine.cpp  random_engine.h  reader.cpp  reader.h  rect_substrate.h  relax_aggregate.cpp  remove_overlap.cpp  remove_overlap.h  restructuring.cpp  restructuring_breaking_necks.cpp  (+6 more)
validation/: 01_particles_colliding.cpp  02_particles_colliding.cpp  03_particles_colliding.cpp  04_particles_colliding.cpp  05_hamaker.cpp  06_sintering.cpp  07_sintering.cpp  08_sintering.cpp  09_sintering.cpp  fixed_step_handler.h
